syntax = "proto3";

option java_multiple_files = true;
option java_package = "co.elastic.apm.agent.grpc.v1_27_1.testapp.generated";

package helloworld;

message HelloRequest {
    string userName = 1;
    int32 depth = 2;
}

message HelloReply {
    string message = 1;
}

service Hello {
    // unary method call
    rpc SayHello (HelloRequest) returns (HelloReply);

    // client streaming
    rpc SayManyHello (stream HelloRequest) returns (HelloReply);

    // server streaming
    rpc SayHelloMany (HelloRequest) returns (stream HelloReply);

    // bidi streaming
    rpc SayHelloStream (stream HelloRequest) returns (stream HelloReply);
}
